RESOLVED FIXED140889
Plug leak in jsValueWithDictionaryInContext().
https://bugs.webkit.org/show_bug.cgi?id=140889
Summary Plug leak in jsValueWithDictionaryInContext().
Andreas Kling
Reported 2015-01-26 11:03:51 PST
There's a JSStringRef leak below jsValueWithDictionaryInContext() according to leaks bot. Let's plug it.
Attachments
Patch (1.37 KB, patch)
2015-01-26 11:04 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2015-01-26 11:04:31 PST
David Kilzer (:ddkilzer)
Comment 2 2015-01-26 11:36:44 PST
Comment on attachment 245356 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=245356&action=review > Source/WebCore/platform/mac/SerializedPlatformRepresentationMac.mm:199 > JSStringRef name = JSStringCreateWithCFString((CFStringRef)key); > JSObjectSetProperty([context JSGlobalContextRef], resultObject, name, [value JSValueRef], 0, &exception); > + JSStringRelease(name); Can we annotate JSStringCreateWithCFString() and JSStringRelease() so the clang static analyzer will find these leaks for us?
WebKit Commit Bot
Comment 3 2015-01-26 12:57:38 PST
Comment on attachment 245356 [details] Patch Clearing flags on attachment: 245356 Committed r179137: <http://trac.webkit.org/changeset/179137>
WebKit Commit Bot
Comment 4 2015-01-26 12:57:42 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.