Plug leak in jsValueWithDictionaryInContext(). <https://webkit.org/b/140889>

Reviewed by Alexey Proskuryakov.

Add a missing JSStringRelease to plug leak that was showing up on leaks bot.

* platform/mac/SerializedPlatformRepresentationMac.mm:
(WebCore::jsValueWithDictionaryInContext):


Canonical link: https://commits.webkit.org/158890@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179137 268f45cc-cd09-0410-ab3c-d52691b4dbfc